deployment/kubernetes/CPU-K8s/kustomize/base/networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  rules:
  - host: test.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: testapi
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: testui
            port:
              number: 80
